--- a/resources/angular-views/dashboard.html
+++ b/resources/angular-views/dashboard.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <h1 ng-show="global.state.user.id > 0" class="text-center">
-                    {{ greeting }} {{ global.state.userData.firstName }}!
+                    {{ greeting }} {{ global.state.user.firstName }}!
                 </h1>
                 <h1 ng-show="global.state.user.id === 0" class="text-center">
                     {{ greeting }}!
