Removed unused components + updated stylesheets

--- a/resources/angular-views/account.html
+++ b/resources/angular-views/account.html
@@ -9,8 +9,8 @@
             <!-- User details -->
             <ui-editable-fields
                 data-model="user"
-                data-save="savePreferences"
-                data-save-callback="savePreferencesCallback"
+                data-save="saveUserDetails"
+                data-save-callback="saveUserDetailsCallback"
                 data-heading="Your Details">
 
                 <!-- Username -->
