--- a/resources/angular-views/dashboard.html
+++ b/resources/angular-views/dashboard.html
@@ -4,10 +4,10 @@
     <div class="dashboard-menu">
 
         <!-- Title -->
-        <div class="row">
+        <div class="row dashboard-title">
             <div class="col-sm-12">
                 <h1 ng-show="global.state.user.id > 0" class="text-center">
-                    {{ greeting }} {{ global.state.user.firstName }}!
+                    {{ greeting }} {{ global.state.user.firstName }},
                 </h1>
                 <h1 ng-show="global.state.user.id === 0" class="text-center">
                     {{ greeting }}!
@@ -36,6 +36,7 @@
                         <span>
                             {{ bookmark.title }}
                         </span>
+                        <span class="bookmark-bottom"></span>
                     </a>
                 </div>
             </div>
