Updated Proxima Nova font files

--- a/resources/angular-views/dashboard.html
+++ b/resources/angular-views/dashboard.html
@@ -10,7 +10,7 @@
                     {{ greeting }} {{ global.state.user.firstName }},
                 </h1>
                 <h1 ng-show="global.state.user.id === 0" class="text-center">
-                    {{ greeting }}!
+                    {{ greeting }}.
                 </h1>
 
                 <h3 class="text-center">
