--- a/resources/angular-views/directive-partials/ui-explorer/folder.html
+++ b/resources/angular-views/directive-partials/ui-explorer/folder.html
@@ -1,12 +1,10 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div class="col-xs-6 col-md-3 col-lg-2 text-center">
-    <a href="{{ href }}">
-        <i class="fa fa-folder-open fa-3x"></i>
-        <br>
-        <br>
+<a href="{{ href }}" class="ui-explorer-item">
+    <i class="fa fa-2x" ng-class="'fa-' + icon"></i>
+    <br>
+    <br>
 
-        {{ title }}
-    </a>
-</div>
+    {{ name }}
+</a>
