--- a/resources/angular-views/dashboard.html
+++ b/resources/angular-views/dashboard.html
@@ -9,10 +9,11 @@
                 <h1
                     ng-show="global.state.user.id > 0 && global.state.user.firstName.length"
                     class="text-center">
-                    
                     {{ greeting }} {{ global.state.user.firstName }},
                 </h1>
-                <h1 ng-show="global.state.user.id === 0" class="text-center">
+                <h1
+                    ng-show="global.state.user.id === 0 || global.state.user.firstName.length === 0"
+                    class="text-center">
                     {{ greeting }}.
                 </h1>
 
