--- a/resources/angular-views/movements/index.html
+++ b/resources/angular-views/movements/index.html
@@ -8,16 +8,8 @@
         <ui-explorer
             data-ng-hide="global.data.isFetchingProfiles === true
                 || global.state.profile.list.length === 0"
-            footer="{{ path }}">
-
-            <div ng-repeat="(id, profile) in global.state.profile.list">
-                <ui-explorer-folder
-                    ng-if="profile.id && profile.id > 0"
-                    data-title="{{ profile.firstName }} {{ profile.lastName }}"
-                    data-href="#/movements/{{ id }}">
-
-                </ui-explorer-folder>
-            </div>
+            data-folders="rootPaths"
+            data-path="{{ path }}">
         </ui-explorer>
 
         <!-- Loading root folders -->
@@ -32,7 +24,8 @@
 
         <!-- No profiles exist -->
         <div
-            ng-show="global.data.isFetchingProfiles === false && global.state.profile.list.length === 0"
+            ng-show="global.data.isFetchingProfiles === false
+                && global.state.profile.list.length === 0"
             class="text-center">
 
             <h3 class="text-center">You do not have any profiles yet.</h3>
@@ -45,11 +38,23 @@
         </div>
     </div>
 
-    <!-- List folder contents -->
-    <ui-explorer
-        ng-show="rootProfile"
-        footer="{{ path }}">
+    <div ng-show="rootProfile">
 
-        Folders, movements...
-    </ui-explorer>
+        <!-- List folder contents -->
+        <ui-explorer
+            ng-hide="global.data.isFetchingMovements === true"
+            data-parent="parentPath"
+            data-path="{{ path }}">
+        </ui-explorer>
+
+        <!-- Loading movements -->
+        <div ng-show="global.data.isFetchingMovements === true">
+            <h2 class="text-center">Retrieving Data...</h2>
+            <br>
+
+            <div class="text-center">
+                <i class="fa fa-spinner fa-spin fa-2x"></i>
+            </div>
+        </div>
+    </div>
 </div>
