--- a/resources/angular-views/directive-partials/ui-explorer/container.html
+++ b/resources/angular-views/directive-partials/ui-explorer/container.html
@@ -55,7 +55,20 @@
     </header>
 
     <!-- Explorer window -->
-    <div ng-include="'directive-partials/ui-explorer/layouts/' + layout + '.html'"></div>
+    <div
+        ng-hide="isLoading === true"
+        ng-include="'directive-partials/ui-explorer/layouts/' + layout + '.html'">
+    </div>
+
+    <!-- Loading movements -->
+    <div ng-show="isLoading === true">
+        <h2 class="text-center">Retrieving Data...</h2>
+        <br>
+
+        <div class="text-center">
+            <i class="fa fa-spinner fa-spin fa-2x"></i>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer>
