--- a/resources/angular-views/movements/index.html
+++ b/resources/angular-views/movements/index.html
@@ -2,59 +2,9 @@
 <div class="page movements-page">
     <ui-page-title data-title="'Organize'" data-icon="'th'"></ui-page-title>
 
-    <div ng-show="!rootProfile">
+    <!-- If no root folder was selected, let the user select one -->
+    <div ng-show="!rootProfile" ng-include="'movements/partials/root-folder.html'"></div>
 
-        <!-- List root folders -->
-        <ui-explorer
-            data-ng-hide="global.data.isFetchingProfiles === true
-                || global.state.profile.list.length === 0"
-            data-folders="rootPaths"
-            data-path="{{ path }}">
-        </ui-explorer>
-
-        <!-- Loading root folders -->
-        <div ng-show="global.data.isFetchingProfiles === true">
-            <h2 class="text-center">Retrieving Your Folders...</h2>
-            <br>
-
-            <div class="text-center">
-                <i class="fa fa-spinner fa-spin fa-2x"></i>
-            </div>
-        </div>
-
-        <!-- No profiles exist -->
-        <div
-            ng-show="global.data.isFetchingProfiles === false
-                && global.state.profile.list.length === 0"
-            class="text-center">
-
-            <h3 class="text-center">You do not have any profiles yet.</h3>
-            <br>
-
-            Once you have profiles, you can start uploading and organizing your movements here.
-            <br>
-
-            Take this opportunity to <a href="#/profile/create">create one</a>.
-        </div>
-    </div>
-
-    <div ng-show="rootProfile">
-
-        <!-- List folder contents -->
-        <ui-explorer
-            ng-hide="global.data.isFetchingMovements === true"
-            data-parent="parentPath"
-            data-path="{{ path }}">
-        </ui-explorer>
-
-        <!-- Loading movements -->
-        <div ng-show="global.data.isFetchingMovements === true">
-            <h2 class="text-center">Retrieving Data...</h2>
-            <br>
-
-            <div class="text-center">
-                <i class="fa fa-spinner fa-spin fa-2x"></i>
-            </div>
-        </div>
-    </div>
+    <!-- Else, let user browse sub folders -->
+    <div ng-show="rootProfile" ng-include="'movements/partials/sub-folder.html'"></div>
 </div>
