Added layouts to recent movements screen

--- a/resources/angular-views/import/index.html
+++ b/resources/angular-views/import/index.html
@@ -7,7 +7,7 @@
         Import movement data for
         <b>
             <a ng-click="global.store.profileId = 0" href="javascript:;">
-                {{ global.getSelectedProfile().first_name + ' ' + global.getSelectedProfile().last_name }}
+                {{ global.getSelectedProfile().firstName + ' ' + global.getSelectedProfile().lastName }}
             </a>
         </b>
 
