--- a/resources/angular-views/movements/index.html
+++ b/resources/angular-views/movements/index.html
@@ -1,10 +1,88 @@
 
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
 <div class="page movements-page">
     <ui-page-title data-title="'Organize'" data-icon="'th'"></ui-page-title>
 
-    <!-- If no root folder was selected, let the user select one -->
-    <div ng-show="!rootProfile" ng-include="'movements/partials/root-folder.html'"></div>
+    <!-- Main container -->
+    <div ng-show="true" class="file-explorer-container">
+        <header>
+            <div class="btn-toolbar" role="toolbar">
 
-    <!-- Else, let user browse sub folders -->
-    <div ng-show="rootProfile" ng-include="'movements/partials/sub-folder.html'"></div>
+                <!-- Layout selector -->
+                <div class="btn-group" role="group">
+                    <button
+                        ng-repeat="btn in layout.list"
+                        ng-click="layout.name = btn.name"
+                        ng-class="{'btn-primary': btn.name == layout.name, 'btn-default': btn.name != layout.name}"
+                        type="button"
+                        class="btn">
+
+                        <i ng-class="'fa-' + btn.icon" class="fa"></i>
+                    </button>
+                </div>
+
+                <!-- Sorting -->
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default">
+                        <i class="fa fa-sort-alpha-asc"></i>
+                    </button>
+                    <button type="button" class="btn btn-default">
+                        <i class="fa fa-sort-alpha-desc"></i>
+                    </button>
+                </div>
+
+                <!-- Folder actions -->
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default">
+                        <i class="fa fa-plus"></i>
+                    </button>
+                </div>
+
+                <!-- ... -->
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default">
+                        <i class="fa fa-refresh"></i>
+                    </button>
+                </div>
+            </div>
+        </header>
+
+        <!-- Movements and folders -->
+        <section
+            ng-show="global.data.isFetchingMovementData === false"
+            ng-include="'movements/partials/' + layout.name + '-layout.html'"
+            ng-class="layout.name + '-layout'">
+        </section>
+
+        <!-- Loading notice -->
+        <section ng-show="global.data.isFetchingMovementData === true">
+            <div class="text-center" style="margin: 60px auto">
+                <i class="fa fa-spinner fa-spin fa-2x"></i>
+            </div>
+        </section>
+
+        <footer>
+            <i class="fa fa-compass fa-fw"></i>
+            <span>
+                {{ path }}
+            </span>
+        </footer>
+    </div>
+
+    <!-- No profile exists -->
+    <div
+        ng-show="global.data.isFetchingProfiles === false
+            && global.state.profile.list.length === 0"
+        class="text-center">
+
+        <h3 class="text-center">You do not have any profiles yet.</h3>
+        <br>
+
+        Once you create a profile, you can start uploading and organizing your movements here.
+        <br>
+        <br>
+
+        Take this opportunity to <a href="#/profile/create">create one</a>.
+    </div>
 </div>
