Updated styles + re-organized hierarchy

--- a/resources/angular-views/capture/index.html
+++ b/resources/angular-views/capture/index.html
@@ -1,6 +1,11 @@
 
 <div class="page">
-    <ui-page-title data-title="'Capture'" data-icon="'video-camera'"></ui-page-title>
+    <header>
+        <h1>
+            Record <i class="fa fa-video-camera"></i>
+            <span></span>
+        </h1>
+    </header>
 
     <h2 style="text-align: center; color: #ccc;">
         In Development
