--- a/resources/angular-views/import/index.html
+++ b/resources/angular-views/import/index.html
@@ -1,6 +1,11 @@
 
 <div class="page import-page">
-    <ui-page-title data-title="'Import'" data-icon="'cloud-upload'"></ui-page-title>
+    <header>
+        <h1>
+            Upload <i class="fa fa-cloud-upload"></i>
+            <span></span>
+        </h1>
+    </header>
 
     <!-- Import page -->
     <div ng-show="global.getSelectedProfile().id > 0">
