--- a/resources/angular-views/movements/analysis/index.html
+++ b/resources/angular-views/movements/analysis/index.html
@@ -2,8 +2,7 @@
 <div class="page">
     <header>
         <h1>
-            Movement Tests
-            <i class="fa fa-pencil-square-o"></i>
+            Analyze <i class="fa fa-line-chart"></i>
             <span></span>
         </h1>
     </header>
