--- a/resources/angular-views/movements/comparison/index.html
+++ b/resources/angular-views/movements/comparison/index.html
@@ -1,6 +1,11 @@
 
 <div class="page">
-    <ui-page-title data-title="'Analyze'" data-icon="'line-chart'"></ui-page-title>
+    <header>
+        <h1>
+            Compare
+            <span></span>
+        </h1>
+    </header>
 
     <h2 style="text-align: center; color: #ccc;">
         In Development
