Bug fixes and code updates to match progress on app dev

--- a/resources/angular-views/account.html
+++ b/resources/angular-views/account.html
@@ -1,7 +1,12 @@
 
 <!-- User details -->
 <div class="page">
-    <ui-page-title data-title="'Account'" data-icon="'cogs'"></ui-page-title>
+    <header>
+        <h1>
+            Account <i class="fa fa-cogs"></i>
+            <span></span>
+        </h1>
+    </header>
 
     <div ng-hide="user.id === 0" class="row">
         <div class="col-md-8">
