--- a/resources/angular-views/configuration.html
+++ b/resources/angular-views/configuration.html
@@ -1,7 +1,12 @@
 
 <!-- User details -->
 <div class="page">
-    <ui-page-title data-title="'Settings'" data-icon="'cogs'"></ui-page-title>
+    <header>
+        <h1>
+            Settings <i class="fa fa-cogs"></i>
+            <span></span>
+        </h1>
+    </header>
 
     <div class="row">
         <div class="col-md-8">
