--- a/resources/angular-views/profile/list.html
+++ b/resources/angular-views/profile/list.html
@@ -2,8 +2,7 @@
 <div class="page page-dashboard">
     <header>
         <h1>
-            Athletes
-            <i class="fa fa-users"></i>
+            Athletes <i class="fa fa-users"></i>
             <span></span>
         </h1>
     </header>
@@ -15,7 +14,7 @@
                 class="btn btn-primary btn-metro"
                 ng-repeat="profile in global.state.profile.list"
                 ng-show="profile.id"
-                ng-click="Rover.browseTo.profile(profile)"
+                ng-click="global.browseTo.profile(profile)"
                 style="background-image: url({{ profile.avatarSrc || '' }});background-size: cover;">
 
                 <div class="btn-title">{{ profile.firstName | characters:30 }}</div>
