--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -1,4 +1,6 @@
 
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
 <!-- Profile summary -->
 <div ng-hide="profile.id === 0" class="page">
     <header>
