--- a/resources/angular-views/screenings/index.html
+++ b/resources/angular-views/screenings/index.html
@@ -1,9 +1,10 @@
 
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
 <div class="page">
     <header>
         <h1>
-            Movement Tests
-            <i class="fa fa-pencil-square-o"></i>
+            Movement Tests <i class="fa fa-pencil-square-o"></i>
             <span></span>
         </h1>
     </header>
