--- a/resources/angular-views/dashboard.html
+++ b/resources/angular-views/dashboard.html
@@ -1,4 +1,6 @@
 
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
 <div class="dashboard page animate-fade-up">
 
     <div class="dashboard-menu">
@@ -26,7 +28,7 @@
         </div>
 
         <!-- Bookmarks -->
-        <div class="row bookmarks">
+        <div class="row">
 
             <!-- Padding for bookmarks -->
             <div ng-show="bookmarks.length === 4" class="col-md-2"></div>
@@ -36,15 +38,13 @@
 
             <!-- Actual bookmarks -->
             <div ng-repeat="bookmark in bookmarks" class="col-md-2">
-                <div class="bookmark-wrapper">
-                    <a href="{{ bookmark.uri }}">
-                        <i ng-class="'fa fa-2x fa-'+ bookmark.icon"></i>
-                        <span>
-                            {{ bookmark.title }}
-                        </span>
-                        <span class="bookmark-bottom"></span>
-                    </a>
-                </div>
+                <a href="{{ bookmark.uri }}" class="btn-dashboard">
+                    <i ng-class="'fa fa-2x fa-'+ bookmark.icon"></i>
+                    <span>
+                        {{ bookmark.title }}
+                    </span>
+                    <span></span>
+                </a>
             </div>
         </div>
     </div>
