--- a/resources/angular-views/import/index.html
+++ b/resources/angular-views/import/index.html
@@ -38,8 +38,24 @@
             </div>
 
             <!-- Uploading movement file -->
-            <div ng-show="isImporting === true" class="col-xs-12 text-center">
-                <i class="fa fa-spinner fa-spin fa-3x"></i>
+            <div
+                ng-show="isImporting === true"
+                class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 text-center">
+
+                <br>
+                <br>
+                <div class="progress">
+                    <div
+                        class="progress-bar"
+                        role="progressbar"
+                        aria-valuenow="60"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        style="min-width: 2em; width: 60%;">
+
+                        60%
+                    </div>
+                </div>
             </div>
         </div>
 
