--- a/resources/angular-views/import/index.html
+++ b/resources/angular-views/import/index.html
@@ -24,10 +24,10 @@
         <div class="movement-import row">
 
             <!-- Import new movement -->
-            <div ng-show="isImporting === false" class="col-xs-12 text-center">
+            <div ng-show="global.data.isImporting === false" class="col-xs-12 text-center">
                 <button
-                    ngf-select="import($files)"
-                    ngf-drop="import($files)"
+                    ngf-select="startImport($files)"
+                    ngf-drop="startImport($files)"
                     accept=".csv,.txt"
                     ngf-max-size="2MB"
                     multiple
@@ -38,30 +38,70 @@
             </div>
 
             <!-- Uploading movement file -->
-            <div
-                ng-show="isImporting === true"
-                class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4 text-center">
+            <div ng-show="global.data.isImporting === true">
 
+                <!-- Import status -->
                 <br>
                 <br>
-                <div class="progress">
-                    <div
-                        class="progress-bar"
-                        role="progressbar"
-                        aria-valuenow="60"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                        style="min-width: 2em; width: 60%;">
+                <h3 class="text-center">
+                    {{ global.data.import.status }}
 
-                        60%
+                    <br>
+                    <small ng-show="global.data.import.queue.length > 1">
+                        {{ global.data.import.queue.length }} movement files left.
+                    </small>
+                    <small ng-show="global.data.import.queue.length <= 1">
+                        Almost done...
+                    </small>
+                </h3>
+                <br>
+
+                <!-- Import progress -->
+                <div class="col-xs-10 col-xs-offset-1 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+                    <div class="progress">
+                        <div
+                            class="progress-bar progress-bar-info progress-bar-striped active"
+                            role="progressbar"
+                            aria-valuenow="{{ global.data.import.progress }}"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                            style="min-width: 2em;"
+                            ng-style="{width: global.data.import.progress + '%'}">
+
+                            {{ global.data.import.progress }}%
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Import actions -->
+                <br>
+                <div class="col-xs-12 text-center">
+                    <div class="btn-group">
+                        <button
+                            ng-disabled="global.data.import.imported.length === 0"
+                            ng-click="global.data.import.imported = []"
+                            type="button"
+                            class="btn btn-default">
+
+                            Clear List
+                        </button>
+
+                        <button
+                            ng-disabled="global.data.import.queue.length <= 1"
+                            ng-click="global.data.import.queue = []"
+                            type="button"
+                            class="btn btn-danger">
+
+                            Stop Import
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div ng-show="global.data.importedMovements.length > 0">
+        <div ng-show="global.data.import.imported.length > 0">
             <!-- List of uploaded movements -->
-            <div ng-repeat="file in global.data.importedMovements" class="movement-import row">
+            <div ng-repeat="file in global.data.import.imported" class="movement-import row">
                 <div class="col-md-3 col-md-offset-1">
 
                     <!-- Movement title -->
@@ -126,14 +166,20 @@
             <!-- Clear button -->
             <div class="movement-import row">
                 <div class="col-sm-12 text-center">
-                    <button type="button" class="btn btn-primary">Done</button>
+                    <button
+                        ng-click="global.data.import.imported = []"
+                        type="button"
+                        class="btn btn-default">
+
+                        Clear List
+                    </button>
                 </div>
             </div>
         </div>
 
         <!-- No recently uploaded movement -->
         <div
-            ng-show="global.data.importedMovements.length === 0 && isImporting === false"
+            ng-show="global.data.import.imported.length === 0 && global.data.isImporting === false"
             class="col-md-6 col-md-offset-3 text-center">
 
             <h3>There are no movements to display.</h3>
@@ -160,7 +206,7 @@
             <br>
 
             You can also take this opportunity to
-            <a href="#profile/create">create one</a>.
+            <a href="#/profile/create">create one</a>.
         </div>
     </div>
 </div>
