Implemented screening listings

--- a/resources/angular-views/screenings/current/index.html
+++ b/resources/angular-views/screenings/current/index.html
@@ -4,7 +4,7 @@
 <div class="page">
     <header>
         <h1>
-            Movement Test
+            Movement Test <i class="fa fa-pencil-square-o"></i>
             <span></span>
         </h1>
 
