Included missing ngStorage dependency

--- a/resources/angular-views/screenings/index.html
+++ b/resources/angular-views/screenings/index.html
@@ -10,6 +10,11 @@
     </header>
 
     <!-- List of screenings -->
+    <table ng-show="global.data.isFetchingScreeningData === false" class="table">
+
+    </table>
+
+    <!-- List of screenings -->
     <div ng-show="global.data.isFetchingScreeningData === false" class="row">
 
         <div
