--- a/resources/angular-views/screenings/index.html
+++ b/resources/angular-views/screenings/index.html
@@ -10,53 +10,41 @@
     </header>
 
     <!-- List of screenings -->
-    <table ng-show="global.data.isFetchingScreeningData === false" class="table">
-
-    </table>
-
-    <!-- List of screenings -->
-    <div ng-show="global.data.isFetchingScreeningData === false" class="row">
-
-        <div
+    <div ng-show="global.data.isFetchingScreeningData === false" class="table-responsive">
+        <table
             ng-show="global.state.screening.list.length > 0"
-            class="col-xs-12 col-md-10 col-md-offset-1">
+            class="table table-striped">
 
             <!-- Heading -->
-            <div class="row heading">
-                <div class="col-md-3 text-center">
-                    Date
-                </div>
-                <div class="col-md-3 text-center">
-                    Title
-                </div>
-                <div class="col-md-3 text-center">
-                    Athlete
-                </div>
-                <div class="col-md-2 text-center">
-                    Score
-                </div>
-            </div>
+            <thead>
+                <tr>
+                    <td class="text-center">Title</td>
+                    <td class="text-center">Date</td>
+                    <td class="text-center">Athlete</td>
+                    <td class="text-center">Score</td>
+                </tr>
+            </thead>
 
             <!-- Screenings -->
-            <div ng-repeat="screening in global.state.screening.list" class="row">
-
-                <!-- Date -->
-                <div class="col-md-3 text-center">
-                    {{ screening.createdAt | mysqlDate }}
-                </div>
-                <div class="col-md-3 text-center">
-                    <a href="#/screenings/{{ screening.id }}">
-                        {{ screening.title | characters:60 }}
-                    </a>
-                </div>
-                <div class="col-md-3 text-center">
-                    {{ screening.profileId }}
-                </div>
-                <div class="col-md-2 text-center">
-                    {{ screening.score | number:0 }}
-                </div>
-            </div>
-        </div>
+            <tbody>
+                <tr ng-repeat="screening in global.state.screening.list">
+                    <td class="text-center">
+                        <a href="#/screenings/{{ screening.id }}">
+                            {{ screening.title | characters:60 }}
+                        </a>
+                    </td>
+                    <td class="text-center">
+                        {{ screening.createdAt | mysqlDate }}
+                    </td>
+                    <td class="text-center">
+                        {{ screening.profileId }}
+                    </td>
+                    <td class="text-center">
+                        {{ screening.score | number:0 }}
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <!-- No screenings to show -->
         <div ng-show="global.state.screening.list.length === 0">
