Working on FMS screens

--- a/resources/angular-views/screenings/current/index.html
+++ b/resources/angular-views/screenings/current/index.html
@@ -12,11 +12,11 @@
         <div ng-show="screening.id > 0 && global.data.isFetchingScreeningData === false" class="h1-append">
             for {{ global.getSelectedProfile().firstName }} {{ global.getSelectedProfile().lastName }}
 
-            <div class="h1-append-sub">
+            <small>
                 <a ng-click="global.store.profileId = 0" href="javascript:;">
                     (change)
                 </a>
-            </div>
+            </small>
         </div>
     </header>
 
@@ -33,9 +33,29 @@
         </h2>
 
 
-        <div ng-repeat="movement in screening.movements" class="row">
-            <div class="col-md-4 col-md-offset-4">
-                {{ $index + 1 }} {{ movement.title }} <i class="fa fa-plus"></i>
+        <div ng-repeat="movement in screening.movements" class="row" style="margin-bottom: 15px;">
+
+            <div class="col-md-3 col-md-offset-4" style="line-height: 30px">
+                <span class="text-muted">{{ $index + 1 }}</span>
+                {{ movement.title }}
+            </div>
+
+            <div class="col-md-2">
+                <button
+                    ng-click="global.alert('In Development')"
+                    class="btn btn-primary btn-circle">
+                    <i class="fa fa-plus"></i>
+                </button>
+                <button
+                    ng-click="global.alert('In Development')"
+                    class="btn btn-primary btn-circle">
+                    <i class="fa fa-cloud-upload"></i>
+                </button>
+                <button
+                    ng-click="global.alert('In Development')"
+                    class="btn btn-primary btn-circle">
+                    <i class="fa fa-th"></i>
+                </button>
             </div>
         </div>
     </div>
