--- a/resources/angular-views/screenings/index.html
+++ b/resources/angular-views/screenings/index.html
@@ -18,6 +18,7 @@
             <!-- Heading -->
             <thead>
                 <tr>
+                    <td class="text-center"></td>
                     <td class="text-center">Title</td>
                     <td class="text-center">Date</td>
                     <td class="text-center">Athlete</td>
@@ -28,16 +29,22 @@
             <!-- Screenings -->
             <tbody>
                 <tr ng-repeat="screening in global.state.screening.list">
-                    <td class="text-center">
-                        <a href="#/screenings/{{ screening.id }}">
-                            {{ screening.title | characters:60 }}
+                    <td class="text-right">
+                        <a ng-click="selectScreening(screening)" href="javascript:;" title="Edit">
+                            <i class="fa fa-pencil-square-o"></i>
                         </a>
+                        <a href="#/screenings/{{ screening.id }}" title="">
+                            <i class="fa fa-list-alt"></i>
+                        </a>
+                    </td>
+                    <td class="text-center">
+                        {{ screening.title | characters:60 }}
                     </td>
                     <td class="text-center">
                         {{ screening.createdAt | mysqlDate }}
                     </td>
                     <td class="text-center">
-                        {{ screening.profileId }}
+                        {{ screening.profile.firstName + ' ' + screening.profile.lastName | characters:40 }}
                     </td>
                     <td class="text-center">
                         {{ screening.score | number:0 }}
